# napi-share

./: .gitattributes  Cargo.toml  index.js  package.json
.github/workflows/: CI.yml
src/: lib.rs
test/: index.mjs
